[package]
name = "milagro-bls-binding"
version = "1.9.1"
edition = "2018"
authors = ["chihchengliang@gmail.com"]
readme = "README.md"

[package.metadata.maturin]
classifier = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
]
maintainer = "Chih-Cheng Liang"
maintainer-email = "chihchengliang@gmail.com"
requires-python = ">=3.8"
project-url = { Source = "https://github.com/ChihChengLiang/milagro_bls_binding/" }

[lib]
name = "milagro_bls_binding"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py38"] }
milagro_bls = {git = "https://github.com/sigp/milagro_bls", tag= "v1.5.0" }
rand = { version = "0.8.5", default-features = false }
