[package]
name = "milagro-bls-binding"
version = "1.9.1"
edition = "2018"
authors = ["chihchengliang@gmail.com"]
readme = "README.md"

[lib]
name = "milagro_bls_binding"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py38"] }
milagro_bls = {git = "https://github.com/sigp/milagro_bls", tag= "v1.5.0" }
rand = { version = "0.8.5", default-features = false }
